# SRArq-Cpp

./: CMakeLists.txt
src/: CMakeLists.txt  mock.h  sr_arq.h
src/srarq/: srarq.h
tests/: CMakeLists.txt
